Added basic site template

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,112 @@
 ---
-title: Welcome to Middleman
+title: Magnus Ottosson - Gothenburg based software developer
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<header>
+	<h1><span>I'm<strong>Magnus<br>Ottosson</strong>- A Senior Software Developer &amp; Creative</h1>
+	<p>
+		Currently: Freelance Developer Focused on Mobile Applications.<br>
+		Previously: Founder at NIXON NIXON.<br>
+		Drop me a line at <a href="#">magnus@magnusottosson.com</a>, check my <a href="#">LinkedIn profile</a>, 
+		or download my <a href="#">CV</a>. Below is a selection of my work.
+	</p>
+</header>
+
+<section id="cases">
+
+	<article id="case-where-is-the-bus" class="case">
+		<figcaption>
+			<h2>WHERE THE **** IS THE BUS?</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/var-ar-bussen.png" alt="Västtrafi - Where is the bus?">
+		</figure>
+	</article>
+	
+	<article id="case-gravidresan" class="case">
+		<figcaption>
+			<h2>Libero Gravidresan</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/libero-gravidresan.png" alt="Libero - Gravidresan">
+		</figure>
+	</article>
+
+	<article id="case-kokbokshyllan" class="case">
+		<figcaption>
+			<h2>Kok<br>boks<br>hyllan</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/kokbokshyllan.png" alt="Kokbokshyllan">
+		</figure>
+	</article>
+
+	<article id="case-gravidboken" class="case">
+		<figcaption>
+			<h2>Libero<br>Gravidboken</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/gravidboken.png" alt="Gravidboken">
+		</figure>
+	</article>
+
+	<article id="case-liberoklubben" class="case">
+		<figcaption>
+			<h2>Libero-<br>klubben</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/liberoklubben.png" alt="Liberoklubben">
+		</figure>
+	</article>
+
+	<article id="case-ostbagsvalet" class="case">
+		<figcaption>
+			<h2>Estrella Ostbågsvalet</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/estrella-ostbagsvalet.png" alt="Ostbågsvalet">
+		</figure>
+	</article>
+
+	<article id="case-cook-and-bake" class="case">
+		<figcaption>
+			<h2>Cook &amp;<br>Bake</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/cook-and-bake.png" alt="Cook &amp; Bake">
+		</figure>
+	</article>
+
+	<article id="case-okobooko" class="case">
+		<figcaption>
+			<h2>Okobooko</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/okobooko.png" alt="Okobooko">
+		</figure>
+	</article>
+
+	<article id="case-husqvarna-sales-tool" class="case">
+		<figcaption>
+			<h2>Husqvarna Sales Tool</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/husqvarna-sales-tool.png" alt="Husqvarna Sales Tool">
+		</figure>
+	</article>
+
+</section>
+
+<footer>
+	<ul class="contact">
+		<li>Connect with me: <strong>Magnus Ottosson</strong></li>
+		<li><a href="mailto:magnus@magnusottosson.com">magnus@magnusottosson.com</a></li>
+		<li><a href="tel:+46733908060">+46 733 90 80 60</a></li>
+		<li><a href="http://www.magnusottossob.com/">http://www.magnusottosson.com</a></li>
+	</ul>
+	<ul class="links">
+		<li><a href=""><i class="fa fa-linkedin-square"></i></a></li>
+		<li><a href=""><i class="fa fa-github"></i></a></li>
+		<li><a href=""><i class="fa fa-twitter"></i></a></li>
+	</ul>
+</footer>
