--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,26 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+	<meta charset="utf-8">
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+	<!-- Always force latest IE rendering engine or request Chrome Frame -->
+	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
-  </head>
+	<!-- Use title if it's in the page YAML frontmatter -->
+	<title><%= current_page.data.title || "The Middleman" %></title>
 
-  <body class="<%= page_classes %>">
-    <%= yield %>
-  </body>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,100,200,500,900,800,700,600' rel='stylesheet' type='text/css'>
+	<%= stylesheet_link_tag "app" %>
+	<%= javascript_include_tag  "all" %>
+</head>
+
+<body class="<%= page_classes %>">
+	<%= yield %>
+</body>
 </html>
