--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -6,3 +6,8 @@ $breakpoint-medium: 750px;
 $breakpoint-large: 1000px;
 $breakpoint-full:1200px;
 $susy: (columns: 12, gutters: 0, container: $breakpoint-full, global-box-sizing: border-box);
+
+$case-headline-border-width: 10px;
+$case-headline-padding-border-side: 20px;
+$case-headline-padding-non-border-side: 10px;
+$case-headline-margin-border-side: 20px;
