--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -148,19 +148,10 @@ strong {
 	.case {
 		@include container;
 		padding: 30px 20px 0 20px;
-		@include at-medium {
-			padding: 50px 30px 0 30px;
-		}
-		@include at-large {}
-		@include at-full {
-			padding: 80px 0 0 0;
-		}
+
 		figure {
-			padding-top: 20px;
-			@include at-large {
-				padding-top: 0;
-			}
 			@include span(12);
+			padding-top: 20px;
 			text-align: center;
 			img {
 				max-width: 100%;
@@ -169,169 +160,89 @@ strong {
 		}
 		figcaption {
 			@include span(12);
-			h2 {
-				border-left: 10px solid #fff;
-				padding-left: 20px;
-				padding-right: 10px;
+		}
+
+		@include at-medium {
+			padding: 50px 30px 0 30px;
+		}
+		@include at-full {
+			padding: 80px 0 0 0;
+		}
+		@include at-large {
+			figure {
+				padding-top: 0;
 			}
 		}
+		
 	}
 	#case-where-is-the-bus {
-		figcaption {
-			h2 {
-				border-color: #1cabe8;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(3);
-			}
-			figure {
-				@include span(9);
-			}
-		}
+		@include case-text-at-left(9, 3, #00aded);
 	}
 	#case-gravidresan {
-		figcaption {
-			h2 {
-				border-color: #ab92e8;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(6);
-			}
-			figure {
-				@include span(6);
-			}
-		}
+		@include case-text-at-right(6, 6, #50538a);
 	}
 	#case-liberoklubben {
-		figcaption {
-			h2 {
-				border-color: #7662a1;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(4);
-			}
-			figure {
-				@include span(6);
-			}
-		}
+		@include case-text-at-left(6, 6, #625094);
 	}
 	#case-kokbokshyllan {
-		figcaption {
-			h2 {
-				border-color: #333;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(4);
-			}
-			figure {
-				@include span(6);
-			}
-		}
+		@include case-text-at-left(7, 5, #333);
 	}
 	#case-cook-and-bake {
-		figcaption {
-			h2 {
-				border-color: #333;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(5);
-			}
-			figure {
-				@include span(6);
-			}
-		}
+		@include case-text-at-right(6, 6, #e8847f);
 	}
 	#case-gravidboken {
-		figcaption {
-			h2 {
-				border-color: #ab92e8;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(5);
-			}
-			figure {
-				@include span(7);
-			}
-		}
+		@include case-text-at-right(7, 5, #ab91da);
 	}
 	#case-ostbagsvalet {
-		figcaption {
-			h2 {
-				border-color: #ab92e8;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(6);
-			}
-			figure {
-				@include span(6);
-			}
-		}
+		@include case-text-at-left(6, 6, #fca72b);
 	}
 	#case-okobooko {
-		figcaption {
-			h2 {
-				border-color: #ace6fb;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(5);
-			}
-			figure {
-				@include span(5);
-			}
-		}
+		@include case-text-at-right(6, 6, #ace6fb);
 	}
 	#case-husqvarna-sales-tool {
-		figcaption {
-			h2 {
-				border-color: #273c5f;
-			}
-		}
-		@include at-large {
-			figcaption {
-				@include span(5);
-			}
-			figure {
-				@include span(5);
-			}
-		}
+		@include case-text-at-left(6, 6, #77a4b3);
 	}
 }
 
 footer {
-	padding: 40px;
 	background: $color-footer-background;
 	color: $color-footer-text;
+	font-family: $font-headline-footer;
+	font-weight: $font-headline-footer-weight;
+
+	h3 {
+		font-family: $font-headline-footer;
+		font-weight: $font-headline-footer-weight;
+		padding: 20px 40px;
+	}
+	
+	p {
+		@include container;
+		@include font-size("footer-text");
+		text-align: center;
+		padding: 40px;
+	}
+
+	ul {
+		@include font-size("footer-list");
+	}
+
 	ul.contact {
 		@include container;
 		text-align: center;
+
 		li {
 			display: inline;
 		}
 		li + li::before {
-			content: "  /  ";
+			content: "  ·  ";
 			color: red;
 		}
 	}
 	ul.links {
 		@include container;
 		text-align: center;
-		padding: 20px 0;
+		padding: 40px;
 		li {
 			display: inline;
 			margin: 0 20px;
@@ -355,6 +266,11 @@ footer {
 	}
 	a, a:active, a:hover, a:visited {
 		color: #fff;
-		font-weight: normal;
+		font-weight: 300;
+		border-bottom: none;
+	}
+
+	a:hover {
+		color: #474747;
 	}
 }
