--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -69,27 +69,17 @@
 
 @mixin case($border-color) {
 
-	figcaption {
-		h2 {
-			border: solid $border-color;
-			border-width: 0 0 $case-headline-border-width 0;
-			padding-bottom: 10px;
-		}
-	}
+	border: solid $border-color;
+	border-width: 0 0 0 5px;
 
 	@include at-large {
 
+		border: none;
+
 		figcaption {
 			h2 {
-				border: none;
-				padding-bottom: 0;
-			}
-		}
-
-		figure {
-
-			img {
 				border: solid $border-color;
+				padding-bottom: 0;
 			}
 		}
 	}
@@ -108,19 +98,15 @@
 			h2 {
 				text-align: right;
 				margin-right: $case-headline-margin-border-side;
+				padding-right: $case-headline-margin-border-side;
 				padding-left: $case-headline-padding-non-border-side;
+				border-width: 0 $case-headline-border-width 0 0;
 			}
 		}
 
 		figure {
 			@include span($img-cols last);
 			text-align: left;
-
-			img {
-				padding-left: $case-headline-padding-border-side;
-				border-width: 0 0 0 $case-headline-border-width;
-				margin-left: -$case-headline-border-width/2;
-			}
 		}
 	}
 }
@@ -138,19 +124,15 @@
 			h2 {
 				text-align: left;
 				margin-left: $case-headline-margin-border-side;
+				padding-left: $case-headline-margin-border-side;
 				padding-right: $case-headline-padding-border-side;
+				border-width: 0 0 0 $case-headline-border-width;
 			}
 		}
 
 		figure {
 			@include span($img-cols first);
 			text-align: right;
-
-			img {
-				padding-right: $case-headline-padding-border-side;
-				border-width: 0 $case-headline-border-width 0 0;
-				margin-right: -$case-headline-border-width/2;
-			}
 		}
 	}
 }
