--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,7 +21,7 @@
 	
 	<article id="case-gravidresan" class="case">
 		<figcaption>
-			<h2>Libero Gravidresan</h2>
+			<h2>Libero<br>Gravidresan</h2>
 		</figcaption>
 		<figure>
 			<img src="/images/case/libero-gravidresan.png" alt="Libero - Gravidresan">
@@ -48,7 +48,7 @@
 
 	<article id="case-ostbagsvalet" class="case">
 		<figcaption>
-			<h2>Estrella Ostbågsvalet</h2>
+			<h2>Estrella<br>Ostbågsvalet</h2>
 		</figcaption>
 		<figure>
 			<img src="/images/case/estrella-ostbagsvalet.png" alt="Ostbågsvalet">
@@ -84,7 +84,7 @@
 
 	<article id="case-husqvarna-sales-tool" class="case">
 		<figcaption>
-			<h2>Husqvarna Sales Tool</h2>
+			<h2>Husqvarna<br>Sales Tool</h2>
 		</figcaption>
 		<figure>
 			<img src="/images/case/husqvarna-sales-tool.png" alt="Husqvarna Sales Tool">
