--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,6 +10,8 @@
 
 <section id="cases">
 
+	<h2>My Work</h2>
+
 	<article id="case-where-is-the-bus" class="case">
 		<figcaption>
 			<h2>WHERE THE **** IS THE BUS?</h2>
