Fixed resume link

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
 		<%= I18n.t(:intro) %>
 	</p>
 	<p>
-		<%= I18n.t(:intro2, :email => mail_to(data.settings.contact.email), :linkedin => link_to("linkedin", data.settings.social.linkedin), :cv => link_to("resume", "/resume/MAGNUS-OTTOSSON.pdf")) %>
+		<%= I18n.t(:intro2, :email => mail_to(data.settings.contact.email), :linkedin => link_to("linkedin", data.settings.social.linkedin), :cv => link_to("resume", "/resume/magnus-ottosson.pdf")) %>
 	</p>
 </header>
 
