Added more cases

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,6 +48,24 @@
 		</figure>
 	</article>
 
+	<article id="case-magnusottosson_com" class="case">
+		<figcaption>
+			<h2>Magnus<br>Ottosson<br>.com</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/magnusottosson_com.png" alt="Magnus Ottosson">
+		</figure>
+	</article>
+
+	<article id="case-trygg-hansa-upptack-havet" class="case">
+		<figcaption>
+			<h2>Trygg Hansa<br>Upptäck<br>Havet</h2>
+		</figcaption>
+		<figure>
+			<img src="/images/case/trygg-hansa-upptack-havet.png" alt="Trygg Hansa Upptäck Havet">
+		</figure>
+	</article>
+
 	<article id="case-ostbagsvalet" class="case">
 		<figcaption>
 			<h2>Estrella<br>Ostbågsvalet</h2>
