--- a/source/stylesheets/_colors.scss
+++ b/source/stylesheets/_colors.scss
@@ -4,6 +4,8 @@ $color-case-liberoklubben: #625094;
 $color-case-kokbokshyllan: #333;
 $color-case-cook-and-bake: #e8847f;
 $color-case-gravidboken: #ab91da;
+$color-case-magnusottosson_com: #333;
+$color-case-trygg-hansa-upptack-havet: #f10f13;
 $color-case-ostbagsvalet: #fca72b;
 $color-case-okobooko: #ace6fb;
 $color-case-husqvarna-sales-tool: #77a4b3;
